# lambda-insights-cdk-spike

./: .gitignore  Makefile  README.md  package-lock.json  pyproject.toml
cdk/: app.py  lambda_insights_stack.py
lambda/: index.py  pyproject.toml
