[tool.poetry]
name = "lambda"
version = "0.1.0"
description = ""
authors = ["Ciaran Evans <ciaran@developmentseed.org>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.50"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
